<resources>
    <string name="app_name">Zipanggo</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="character_placeholder">あ</string>
    <string name="transliteration_placeholder">a</string>
    <string name="transliteration_placeholder1">ma</string>
    <string name="stroke_count_placeholder">1</string>
    <string name="mnemonic_text_placeholder">ahas</string>
    <string name="lorem_ipsum_placeholder">Lorem Ipsum</string>
    <string name="number_placeholder">00</string>
    <string name="hiragana_word_placeholder">いっしょ</string>
    <string name="kanji_word_placeholder">_緒</string>
    <string name="kanji_meaning_placeholder">kasama ang lahat</string>
    <string name="hiragana_reference_header">Hiragana Syllables</string>
    <string name="hiragana_quiz_header">Hiragana Quiz</string>
    <string name="gojuuon_header">Gojūon 【五十音】</string>
    <string name="voiced_header">Voiced</string>
    <string name="stroke_count">Strokes:</string>
    <string name="mnemonic_header">Mnemonic</string>
    <string name="drawing_practice_header">Drawing Practice</string>
    <string name="quiz_input_hint">Answer</string>
    <string name="choice_confirm_text">CONFIRM</string>
    <string name="choice_cancel_text">CANCEL</string>
    <string name="choice_create_text">CREATE</string>
    <string name="choice_take_text">TAKE QUIZ</string>
    <string name="menu_account_header">Account</string>
    <string name="menu_account_newaccount">+ Create a new account</string>
    <string name="menu_account_create_name_label">Account Name</string>
    <string name="menu_account_create_pass_label">Password</string>
    <string name="menu_account_desc_1">You are using this account</string>
    <string name="menu_account_desc_2">Use this account</string>
    <string name="account_popup_menu_choose">Choose</string>
    <string name="account_popup_menu_delete">Delete</string>
    <string name="menu_study_button_gettingstarted_header">Getting Started</string>
    <string name="menu_study_button_gettingstarted_desc">A guide for the beginners of Zipanggo</string>
    <string name="menu_study_button_referencesheet_header">Reference Sheet</string>
    <string name="menu_study_button_referencesheet_desc">Reference sheet for Japanese characters</string>
    <string name="menu_study_button_kanjidictionary_header">Kanji Dictionary</string>
    <string name="menu_study_button_kanjidictionary_desc">Dictionary for Chinese characters</string>
    <string name="menu_study_button_bookmark_header">Kanji Bookmark</string>
    <string name="menu_study_button_bookmark_desc">List of bookmark/s for Chinese characters</string>
    <string name="menu_study_button_flashcard_header">Flashcards</string>
    <string name="menu_study_button_flashcard_desc">Customizable flashcards set for Japanese characters</string>
    <string name="menu_study_button_quiz_header">Quizzes</string>
    <string name="menu_study_button_quiz_desc">Customizable quiz session for Japanese characters</string>
    <string name="menu_study_button_lesson_header">Lessons</string>
    <string name="menu_study_button_lesson_desc">Topics all about the Japanese language</string>
    <string name="menu_study_button_readingexercise_header">Reading Exercises</string>
    <string name="menu_study_button_readingexercise_desc">Japanese literature for some reading exercises</string>
    <string name="menu_study_cd_choice_referencesheet_header">Choose a Reference Sheet</string>
    <string name="menu_study_cd_choice_flashcard_header">Create a Flashcard Set</string>
    <string name="menu_study_cd_choice_quiz_header">Create a Quiz Session</string>
    <string name="menu_study_cd_choice_system_hiragana">Hiragana</string>
    <string name="menu_study_cd_choice_system_katakana">Katakana</string>
    <string name="menu_study_cd_choice_system_kanji">Kanji</string>
    <string name="menu_study_cd_choice_sound_basic">Gojuuon</string>
    <string name="menu_study_cd_choice_sound_voiced_dakuon">Dakuon</string>
    <string name="menu_study_cd_choice_sound_voiced_handakuon">Handakuon</string>
    <string name="menu_study_cd_choice_sound_combo">Youon</string>
    <string name="menu_study_cd_choice_level_kanji_n5">N5</string>
    <string name="menu_study_cd_choice_level_kanji_n4">N4</string>
    <string name="menu_study_cd_choice_level_kanji_n3">N3</string>
    <string name="menu_study_cd_choice_level_kanji_n2">N2</string>
    <string name="menu_study_cd_choice_level_kanji_n1">N1</string>
    <string name="menu_game_button_romakanaspeed_header">Roma2Kana Speed</string>
    <string name="menu_game_button_romakanaspeed_desc">Match the romaji to its hiragana counterpart</string>
    <string name="menu_game_button_romakanamatch_header">Roma2Kana Match</string>
    <string name="menu_game_button_romakanamatch_desc">Match all the matching pair of cards</string>
    <string name="menu_game_button_missingkanji_header">Missing Kanji</string>
    <string name="menu_game_button_missingkanji_desc">Find the missing kanji character in a word</string>
    <string name="menu_statistic_button_quizreport_header">Quiz Reports</string>
    <string name="menu_statistic_button_quizreport_desc">Look at your previously taken quiz results</string>
    <string name="menu_statistic_button_achievement_header">Achievements</string>
    <string name="menu_statistic_button_achievement_desc">Look at your accomplished milestones</string>
    <string name="menu_statistic_button_gamescore_header">Game Scores</string>
    <string name="menu_statistic_button_gamescore_desc">Look at your scores from the games</string>
    <string-array name="kanjidictionary_n5_category">
        <item>Numbers/Numbers in Japanese</item>
        <item>2/2</item>
        <item>3/3</item>
        <item>4/4</item>
    </string-array>
    <string name="kanji_button_kanji_placeholder">人</string>
    <string name="kanji_button_meaning_placeholder">tao; isang tao; mga tao</string>
    <string name="kanji_button_onyomi_placeholder">On: ジン、 ニン</string>
    <string name="kanji_button_kunyomi_placeholder">Kun: ひと、 -り、 -と</string>
    <string name="kanji_card_jlptlevel_n5">JLPT N5</string>
    <string name="kanji_card_jlptlevel_n4">JLPT N4</string>
    <string name="kanji_card_jlptlevel_n3">JLPT N3</string>
    <string name="kanji_card_jlptlevel_n2">JLPT N2</string>
    <string name="kanji_card_jlptlevel_n1">JLPT N1</string>
    <string name="kanji_card_back_kunyomi">Kun:\u0020</string>
    <string name="kanji_card_back_onyomi">On:\u0020</string>
    <string name="kanji_card_back_meaning">Meaning:\u0020</string>
    <string name="kanji_card_back_radical">Radical/s:\u0020</string>
    <string name="kanji_card_back_part">Part/s:\u0020</string>
    <string name="kanji_card_back_variant">Variant/s:\u0020</string>
    <string name="menu_lesson_title_0">Japanese Internet</string>
    <string-array name="lesson_japanese_internet">
        <item>Emoji is Japanese?!?!?/The truth behind the false cognate between "emoji" and "emotion"</item>
        <item>2/2</item>
        <item>3/3</item>
        <item>4/4</item>
    </string-array>
    <string name="menu_readingexercise_title_0">Momotaro</string>
    <string name="readingexercise_momotaro">
        <![CDATA[
            <h1>Part 1: Momotaro</h1>
            <center><img src=\'img_readingexercise_momotaro.png\'/></center>
            <p>
                <b>&emsp;(Japanese):</b>
                <br/>
                むかし、 むかし、 ある ところ <strong>に</strong>
                <br/>
                おじいさん <strong>と</strong> おばあさん<strong> が</strong> いました。
                <br/>
                <b>&emsp;(Romaji):</b>
                <br/>
                <i>Mukashi, mukashi, aru tokoro <strong>ni</strong></i>
                <br/>
                <i>ojiisan <strong>to</strong> obaasan <strong>ga</strong> imashita.</i>
                <br/>
                <b>&emsp;(English):</b>
                <br/>
                Long, long ago, in some place…
                <br/>
                There was an old man and an old woman.
                <br/>
                <b>&emsp;(Filipino):</b>
                <br/>
                Isang araw, sa malayong lugar…
                <br/>
                Mayroong isang matandang lalake at isang matandang babae.
            </p>
            <p>
                <b>&emsp;(Japanese):</b>
                <br/>
                おじいさん <strong>が</strong> やま <strong>へ</strong> き を きり <strong>に</strong> いけば、
                <br/>
                おばあさん <strong>は</strong> かわ <strong>へ</strong> せんたく <strong>に</strong> でかけます。
                <br/>
                <b>&emsp;(Romaji):</b>
                <br/>
                <i>Ojiisan <strong>ga</strong> yama <strong>e</strong> ki <strong>o</strong> kiri <strong>ni</strong> ikeba,</i>
                <br/>
                <i>obaasan <strong>wa</strong> kawa <strong>e</strong> sentaku <strong>ni</strong> dekakemasu.</i>
                <br/>
                <b>&emsp;(English):</b>
                <br/>
                When the old man went to the mountain to cut trees,
                <br/>
                the old woman went out to the river to wash clothes.
                <br/>
                <b>&emsp;(Filipino):</b>
                <br/>
                Nang pumunta ang matandang lalake sa bundok upang magputol ng mga puno,
                <br/>
                ang matandang babae naman ay lumabas papunta sa ilog upang maglaba ng mga damit.
            </p>
            <p>
            <br/>
                <b>&emsp;(Japanese):</b>
                <br/>
                「おじいさん、 はよう もどってきなされ。」
                <br/>
                <b>&emsp;(Romaji):</b>
                <br/>
                <i>“Ojiisan, hayou modotte kinasare.“</i>
                <br/>
                <b>&emsp;(English):</b>
                <br/>
                “Old man, come back quickly.”
                <br/>
                <b>&emsp;(Filipino):</b>
                <br/>
                ”Matanda, bumalik ka kaagad.” Sabi ng matandang babae.
            </p>
            <p>
                <b>&emsp;(Japanese):</b>
                <br/>
                「おばあさん <strong>も</strong> き <strong>を</strong> つけて な。」
                <br/>
                <b>&emsp;(Romaji):</b>
                <br/>
                <i>“Obaasan <strong>mo</strong> ki <strong>o</strong> tsukete na.”</i>
                <br/>
                <b>&emsp;(English):</b>
                <br/>
                “Old woman, you also be careful please.”
                <br/>
                <b>&emsp;(Filipino):</b>
                <br/>
                “Matanda, mag-ingat ka rin.” Sabi ng matandang lalake.
            </p>
            <p>
                <b>&emsp;(Japanese):</b>
                <br/>
                まいにち やさしく いい あって でかけます。
                <br/>
                <b>&emsp;(Romaji):</b>
                <br/>
                <i>Mainichi yasashiku ii atte dekakemasu.</i>
                <br/>
                <b>&emsp;(English):</b>
                <br/>
                Each day they gently say that to each other and go out.
                <br/>
                <b>&emsp;(Filipino):</b>
                <br/>
                Araw-araw ay malumanay nilang sinasabi iyon sa isa\'t isa habang lumalabas.
            </p>
        ]]>
    </string>
    <string name="missingkanji_difficulty_easy">Easy</string>
    <string name="missingkanji_difficulty_medium">Medium</string>
    <string name="missingkanji_difficulty_hard">Hard</string>
    <string name="game_button_text">PLAY</string>
    <string name="game_bestscore_text_hiragana">HIRAGANA BEST: </string>
    <string name="game_gameover_header">GAME OVER</string>
    <string name="game_gameover_message">Your final score is:</string>
    <string name="game_gameover_personalscore">Your best score is:</string>
</resources>