<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:baselineAligned="false">

    <RelativeLayout
        android:id="@+id/menu_game_diff_rl_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <RadioGroup
            android:id="@+id/menu_game_diff_rg_diffgroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/menu_game_diff_rb_easy">

            <RadioButton
                android:id="@+id/menu_game_diff_rb_easy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/darker_red"
                android:text="@string/missingkanji_difficulty_easy" />

            <RadioButton
                android:id="@+id/menu_game_diff_rb_med"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/darker_red"
                android:text="@string/missingkanji_difficulty_medium" />

            <RadioButton
                android:id="@+id/menu_game_diff_rb_hard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/darker_red"
                android:text="@string/missingkanji_difficulty_hard" />

        </RadioGroup>

    </RelativeLayout>

</LinearLayout>