<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:layout_weight="80">

        <TextView
            android:id="@+id/missingkanji_tv_bestscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/missingkanji_tv_bestscore_value"
            android:layout_toLeftOf="@id/missingkanji_tv_bestscore_value"
            android:text="EASY BEST: "
            android:textColor="@color/darker_red"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/missingkanji_tv_bestscore_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:text="@string/number_placeholder"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:layout_weight="20"
        android:gravity="bottom">

        <TextView
            android:id="@+id/missingkanji_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum_placeholder"
            android:textColor="@color/darker_red"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/missingkanji_tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/missingkanji_tv_title"
            android:text="@string/lorem_ipsum_placeholder"
            android:textSize="16sp" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/missingkanji_md_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/missingkanji_tv_description"
            android:layout_marginTop="13dp"
            app:dividerColor="@color/darker_red"
            app:dividerThickness="2dp" />

        <RadioGroup
            android:id="@+id/missingkanji_rg_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/missingkanji_md_divider"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:checkedButton="@id/missingkanji_rb_easy">

            <RadioButton
                android:id="@+id/missingkanji_rb_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:buttonTint="@color/darker_red"
                android:text="@string/missingkanji_difficulty_easy" />

            <RadioButton
                android:id="@+id/missingkanji_rb_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/darker_red"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/missingkanji_difficulty_medium" />

            <RadioButton
                android:id="@+id/missingkanji_rb_hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/darker_red"
                android:text="@string/missingkanji_difficulty_hard" />

        </RadioGroup>

        <Button
            android:id="@+id/missingkanji_b_playbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/missingkanji_rg_radiogroup"
            android:padding="10dp"
            android:text="@string/game_button_text"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>